--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.3.2",
+    "colors": "^1.4.0",
     "express": "^4.18.2",
     "socket.io-client": "^4.6.0"
   },
